# solitons1d

./: README.md  pyproject.toml
src/solitons1d/: __init__.py  grid.py  lagrangian.py  lagrangian_library.py  soliton.py
src/solitons1d/tests/: all_test.py
