[project]
name = "solitons1d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chrishalcrow", email = "chrishalcrow@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pytest>=8.4.0",
    "tool>=0.8.0",
]

[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]


[tool.ruff]
# Set the maximum line length to 90.
line-length = 90

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
